# cargo-flow

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cargo.rs  cli.rs  command.rs  generate.rs  main.rs  workflow.rs
templates/: default.yml  matrix.yml
